Add properties attribute in emotion and add a way to get reactions by dates.
